# hw-binding-samples

./: .gitignore  Makefile.am  README.md  configure.ac  docker-compose.yml
idl/: Makefile.am  kms.proto
kms-sidecar/: Makefile.am
kms-sidecar/include/: kms_sidecar.h
kms-sidecar/src/: defines.h  externs.h  globals.c  grpc_server.cc  includes.h  kms_sidecar.c  main.c
sample-service/: Makefile.am
sample-service/include/: sample_service.h
sample-service/src/: defines.h  externs.h  globals.c  grpc_client.cc  includes.h  main.c  sample_service.c
support/developer/scripts/: provision-tpm.sh  run-containers.sh  setup-devenv.sh
tunnel-demo/kms-sidecar/: Dockerfile
tunnel-demo/sample-service/: Dockerfile
